# ITMO_ICT_WebDevelopment_tools_2025-2026

./: 404.html  README.md  mkdocs.yml  sitemap.xml
docs/: index.html
lr1/: index.html
students/k3341/Skoblilova_Viktoria/Lr1/gateway/: Dockerfile  README.md  config.py  example.env  main.py  pyproject.toml  requirements.txt
students/k3341/Skoblilova_Viktoria/Lr1/gateway/api/: __init__.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/api/apps/: __init__.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/core/: __init__.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/core/auth/: get_auth_core.py  post_auth_core.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/core/time/: __init__.py  delete_time_core.py  get_time_core.py  post_time_core.py  put_time_core.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/core/users/: get_users_core.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/logs/: log_worker.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/middlewares/: __init__.py  permission.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/migrations/: README.md  env.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/models/: _annotations.py  _base_class.py  main_app_user_model.py  main_tm_daily_plan_model.py  main_tm_project_model.py  main_tm_reminder_model.py  main_tm_task_model.py  main_tm_time_entry_model.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/schedulers/: data_init.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/templates/: enums.py  responses.py
students/k3341/Skoblilova_Viktoria/Lr1/gateway/utils/: func_utils.py  logger.py
(+69 files in other folders)
